[package]
name = "classes"
version = "0.1.0"
authors = ["Adil Mohiuddin <amohi9046@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json", "cookies"] }
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.5.7", features = ["postgres", "runtime-tokio-rustls"] }
postgres-types = "0.2.1"
toml = "0.5.8"
serde_json = "1.0.68"
http = "0.2.5"
regex = "1.5.4"
dialoguer = "0.8.0"
serde_derive = "1.0.130"
clap = "3.0.0-beta.5"